[package]
name = "touchpad-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mouse-rs = "0.4.2"
json = "0.12.4"
local-ip-address = "0.5.1"
simplelog = "0.12.0"
log = "0.4.17"
rouille = "3.6.1"
config = "0.13.3"
tray-icon = "0.3.0"
image = { version = "0.24.5", default-features = false, features = ["png"] }

[profile.release]
strip = true
